ingress/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
    - name: custom-port
      port: 8080
      targetPort: 8080
      nodePort: 30081
  selector:
    app.kubernetes.io/name: ingress-nginx
