ingress/ingress copy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-access-log: "true" # Habilitar el registro de acceso
    nginx.ingress.kubernetes.io/access-log-format: '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" "$request_length" "$request_time"' # Formato del registro de acceso
  labels:
    app: my-app
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /web(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: web-service
            port:
              number: 80
      - path: /token(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: tokensrv-service
            port:
              number: 3002
      - path: /auth(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: authsrv-service
            port:
              number: 3001
      - path: /blob(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: blobsrv-service
            port:
              number: 3003
